--- a/index.html
+++ b/index.html
@@ -38,10 +38,30 @@
       </div>
     </div>
 
-    <div class="main">
-      <div class="blog"></div>
+    <main>
+      <section class="blog">
+        <h2 class="blog-heading">Recent Blogs</h2>
+        <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/forest.jpg">
+            <section class="blog-text">
+              <h3>
+                <div class="blog-text-heading">
+                  <a href="single.html">
+                    Hopeful lessons from<br/>
+                    the battle to save<br/>
+                    rainforests
+                  </a>
+                </div>
+              </h3>
+              <p class="blog-date">June 19, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+        </div>
+      </section>
       <div class="sidebar"></div>
-    </div>
+    </main>
 
     <footer>
       <p class="footer-text">©︎　All rights reserved by Infratop.Inc.</p>
